# stm32_bare_metal_timer

./: .gitignore  CMakeLists.txt  README.md  linker_script.ld
src/: clocks.s  io_operations.s  main.s  pause_resume_button.s  plus_30_secs_button.s  seven_seg_disp.s  startup.s  tim2.s  tim3.s
